--- a/build.gradle
+++ b/build.gradle
@@ -23,4 +23,4 @@ javafx {
     version = "16"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
-mainClassName = 'ucf.assignments.App'
+mainClassName = 'ucf.assignments.InventoryTracker'
